Fix z-index thing between CardHand and CardTable.

--- a/src/scss/chat-gpt.scss
+++ b/src/scss/chat-gpt.scss
@@ -91,8 +91,10 @@ $card-table-distance: 100px;
 	font-size: 0.8em;
 }
 
-.card.clickable {
-	transition: transform 0.2s ease-out;
+.card.playable {
+	cursor: pointer;
+	transition: transform 0.15s ease-out;
+	transform-origin: bottom center;
 	&:hover {
 		transform: scale(1.1);
 	}
@@ -113,7 +115,7 @@ $card-table-distance: 100px;
 	flex-direction: row;
 	justify-content: flex-start;
 	align-items: flex-end;
-	height: 100%;
+	// height: 100%;
 
 	.card-hand-item + .card-hand-item {
 		margin-left: -40px;
